@@ -9,6 +9,10 @@ FROM 		= "bas@localhost"
 # but they don't have to be:
 SUBJECT 	= Hey, user, clean up your account!
 CC_TO 		= "sysadm@localhost"
+# If you set this variable CC will be used only when user has less than
+# specified grace time left (examples of possible times: 5 seconds, 1 minute,
+# 12 hours, 5 days)
+# CC_BEFORE = 2 days
 SUPPORT 	= "support@myhost.com"
 PHONE 		= "(123) 456-1111 or (222) 333-4444"
 # Text in the beginning of the mail (if not specified, default text is used)
@@ -28,7 +32,7 @@ I chose you to do the cleanup.|Delete group files on following filesystems:|
 GROUP_SIGNATURE	= See you!|			Your admin|
 #
 #If you are running warnquota on a mail server, and don't want bounces
-#because clients can not receive mail setting this to "any" will cause
+#because clients cannot receive mail setting this to "any" will cause
 #warnquota to not send them mail for all devices.  If you set this to the
 #device name (for example /dev/hdb1) then they will not be sent mail if they
 #are overquota on that device only, and will be sent mail for all other
